# gtfs2map

./: .gitignore  Dockerfile  README.md  default.env  docker-compose.yaml  entrypoint.sh  pyproject.toml
src/feedmap/: __main__.py  context.py  renderer.py
src/gtfs2map/: __main__.py  context.py  renderer.py
src/gtfsrtmapfx/: __main__.py  context.py  renderer.py
view/default/: index.html.j2  layout.html.j2  layout.j2  packages.json  route.html.j2
view/default/components/: agency_section.j2  map.j2  realtime_init_script.j2  route.j2  route_item.j2  vehicle_info_dialog.j2
view/default/routes/: route.html.j2
view/default/static/css/: app.css  w3-theme.css.j2
view/default/static/js/: app.js  app.js.j2  data.js.j2  maplibre.js
